cluster/mediacms/deployment-celery-beat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mediacms-celery-beat-deployment
  namespace: mediacms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mediacms-celery-beat
  template:
    metadata:
      labels:
        app: mediacms-celery-beat
    spec:
      nodeSelector:
        role: apps
      containers:
        - name: celery-beat
          # registry-proxy image-prefix
          image: cr.nathanv.app/docker.io/mediacms/mediacms@sha256:f05e140805c1c1a49d2f3d35cfd6dbbf3a153bffe39d02a32b8642a76a473662
          volumeMounts:
            - mountPath: /home/mediacms.io/mediacms/media_files/
              name: mediacms-media-vol
            - mountPath: /home/mediacms.io/mediacms/deploy/docker/local_settings.py
              name: mediacms-vol-settings
              subPath: local_settings.py
      volumes:
        - name: mediacms-media-vol
          persistentVolumeClaim:
            claimName: mediacms-pvc-media
        - name: mediacms-vol-settings
          configMap:
            name: mediacms-configmap
