cluster/mediacms/deployment-celery-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mediacms-celery-worker-deployment
  namespace: mediacms
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mediacms-celery-worker
  template:
    metadata:
      labels:
        app: mediacms-celery-worker
    spec:
      # Spread the replicas across physical nodes
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: mediacms-celery-worker
      nodeSelector:
        role: apps
      containers:
        - name: celery-worker
          # registry-proxy image-prefix
          image: cr.nathanv.app/docker.io/mediacms/mediacms@sha256:110df89274b0e5703e2ca1bd997c293ff1d994c10150bc4554482d208ce13362
          volumeMounts:
            - mountPath: /home/mediacms.io/mediacms/media_files/
              name: mediacms-media-vol
            - mountPath: /home/mediacms.io/mediacms/deploy/docker/local_settings.py
              name: mediacms-vol-settings
              subPath: local_settings.py
      volumes:
        - name: mediacms-media-vol
          persistentVolumeClaim:
            claimName: mediacms-pvc-media
        - name: mediacms-vol-settings
          configMap:
            name: mediacms-configmap
