cluster/mediacms/service-mediacms.yaml
apiVersion: v1
kind: Service
metadata:
  name: mediacms-service
  namespace: mediacms
spec:
  type: ClusterIP
  selector:
    app: mediacms
  ports:
    - port: 80
      protocol: TCP
