cluster/mediacms/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mediacms-route
  namespace: mediacms
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`videos.nathanv.app`)
      kind: Rule
      services:
        - name: mediacms-service
          port: 80
  tls:
    certResolver: le
    domains:
      - sans:
          - "*.nathanv.app"
